@@ -116,7 +116,8 @@
         </javac>
         <copy todir="${build.dir}">
             <fileset dir="${src.dir}">
-                <include name="META-INF"/>
+                <include name="META-INF/**"/>
+                <exclude name="CVS"/>
             </fileset>
         </copy>
     </target>
